# fci4096

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
data/: four_chinese_idiom.csv  four_chinese_idiom.json  four_chinese_idiom.txt  four_chinese_idiom_zip.json
examples/: generate.rs  recover.rs
src/: entropy.rs  error.rs  idiom_list.rs  lib.rs  mnemonic.rs  seed.rs  wasm.rs
tests/: integration.rs
