[package]
name = "fci4096"
version = "0.1.3"
edition = "2021"
description = "BIP39 mnemonic implementation using 4096 Chinese idioms"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fangeus/fci4096"
documentation = "https://docs.rs/fci4096"
keywords = ["bip39", "mnemonic", "cryptography", "idiom", "chinese"]
categories = ["cryptography", "no-std"]
include = [
    "src/**/*",
    "data/**/*",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "examples/**/*",
    "tests/**/*",
    "benches/**/*",
]

[features]
default = ["std", "rand"]
std = ["digest/std", "hmac/std", "pbkdf2/std"]
rand = ["dep:getrandom"]
wasm = ["dep:wasm-bindgen", "js-sys", "rand"]
serde = ["dep:serde"]

[dependencies]
digest = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha2 = { version = "0.10", default-features = false }

unicode-normalization = { version = "0.1", default-features = false }

getrandom = { version = "0.2", optional = true, default-features = false }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lib]
name = "fci4096"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

# On wasm32 targets, getrandom needs the js feature for crypto.getRandomValues()
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"] }